@@ -1,0 +1,1 @@
+- support dicom-json source in OHIF plugin: https://discourse.orthanc-server.org/t/authantication-not-working-for-orthanc-explorer-2/4238/11
